--- a/package.json
+++ b/package.json
@@ -27,21 +27,28 @@
   "homepage": "https://github.com/reactbits/fiber#readme",
   "dependencies": {
     "lodash": "^3.10.1",
-    "react": "^0.14.2"
+    "moment": "^2.10.6",
+    "react": "^0.14.2",
+    "react-markdown2": "^0.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.1.0",
     "babel": "^6.0.15",
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.4",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
+    "css-loader": "^0.22.0",
     "eslint": "^1.8.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.7.1",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^0.9.1",
     "json-loader": "^0.5.3",
+    "node-sass": "^3.4.1",
     "react-dom": "^0.14.2",
+    "sass-loader": "^3.1.1",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
