--- a/package.json
+++ b/package.json
@@ -43,12 +43,19 @@
     "eslint": "^1.8.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.7.1",
+    "eventemitter3": "^1.1.1",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
+    "got": "^5.1.0",
     "json-loader": "^0.5.3",
     "node-sass": "^3.4.1",
+    "normalize.css": "^3.0.3",
+    "postcss-loader": "^0.7.0",
+    "prismjs-package": "^0.3.0",
+    "qwest": "^2.2.2",
     "react-dom": "^0.14.2",
     "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
