get demo app working fetching and rending data, but without styles yet

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext .js,.jsx .",
     "babel": "babel src --out-dir lib",
     "build:demo": "webpack --config webpack.config.js",
+    "watch": "webpack --config webpack.config.js --watch",
     "test": "npm run lint"
   },
   "repository": {
