--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss-loader": "^0.7.0",
     "prismjs-package": "^0.3.0",
     "qwest": "^2.2.2",
+    "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
