--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.1.2",
     "cpx": "^1.2.1",
     "css-loader": "^0.22.0",
     "eslint": "^1.8.0",
