--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "qwest": "^2.2.2",
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
+    "redux-devtools": "^2.1.5",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
