use redux in demo app

--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "eslint": "^1.8.0",
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-react": "^3.7.1",
-    "eventemitter3": "^1.1.1",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "got": "^5.1.0",
     "json-loader": "^0.5.3",
+    "make-reducer": "^0.1.0",
     "node-sass": "^3.4.1",
     "normalize.css": "^3.0.3",
     "postcss-loader": "^0.8.0",
