--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "got": "^5.1.0",
+    "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
-    "make-reducer": "^0.1.0",
+    "make-reducer": "^0.2.0",
     "node-sass": "^3.4.2",
     "normalize.css": "^3.0.3",
     "postcss-loader": "^0.8.0",
