--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "make-reducer": "^0.4.0",
+    "morgan": "^1.6.1",
     "node-sass": "^3.4.2",
     "normalize.css": "^3.0.3",
     "postcss-loader": "^0.8.0",
