--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "redux-devtools": "^2.1.5",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "sweetalert": "^1.1.3",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.4.1"
