--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "autoprefixer": "^6.1.2",
     "babel": "^6.3.13",
     "babel-core": "^6.3.17",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^2.0.0-beta1",
     "babel-preset-es2015": "^6.3.13",
