fix integration of new redux devtools

--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "redbox-react": "^1.2.0",
     "redux": "^3.0.5",
     "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "sweetalert": "^1.1.3",
