fixes, collapsible days, iconSet

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/reactbits/fiber#readme",
   "dependencies": {
+    "classnames": "^2.2.2",
     "halogen": "^0.1.10",
     "lodash": "^3.10.1",
     "md5": "^2.0.0",
