--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "sweetalert": "^1.1.3",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-sources": "^0.1.0"
   }
 }
