--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-config-airbnb": "^3.0.0",
     "eslint-plugin-react": "^3.14.0",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^0.9.1",
     "got": "^5.3.0",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.4",
@@ -65,7 +65,7 @@
     "normalize.css": "^3.0.3",
     "postcss-loader": "^0.8.0",
     "prismjs-package": "^0.4.0",
-    "qwest": "^2.2.8",
+    "qwest": "^2.2.9",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.5",
     "react-redux": "^4.0.6",
@@ -81,7 +81,6 @@
     "sweetalert": "^1.1.3",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0",
-    "webpack-sources": "^0.1.0"
+    "webpack-hot-middleware": "^2.6.0"
   }
 }
