--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "query-string": "^3.0.0",
     "react": "^0.14.5",
     "react-imageloader": "^2.1.0",
-    "react-markdown2": "^0.4.2"
+    "react-markdown2": "^0.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
@@ -55,7 +55,7 @@
     "eslint-config-airbnb": "^3.0.0",
     "eslint-plugin-react": "^3.14.0",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "extract-text-webpack-plugin": "^1.0.0",
     "got": "^5.3.0",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.4",
@@ -64,7 +64,7 @@
     "node-sass": "^3.4.2",
     "normalize.css": "^3.0.3",
     "postcss-loader": "^0.8.0",
-    "prismjs-package": "^0.4.0",
+    "prismjs-package": "^0.5.0",
     "qwest": "^2.2.9",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.5",
@@ -81,6 +81,7 @@
     "sweetalert": "^1.1.3",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-sources": "^0.1.0"
   }
 }
