--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-fiber",
   "version": "0.2.16",
-  "description": "React components to use in chat, email applications.",
+  "description": "React components to use in messaging applications.",
   "main": "lib/index.js",
   "scripts": {
     "start": "node devserver.js",
@@ -35,14 +35,14 @@
     "md5": "^2.0.0",
     "moment": "^2.11.0",
     "query-string": "^3.0.0",
-    "react": "^0.14.5",
+    "react": "^0.14.6",
     "react-imageloader": "^2.1.0",
-    "react-markdown2": "^0.4.3"
+    "react-markdown2": "^0.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
     "babel": "^6.3.26",
-    "babel-core": "^6.3.26",
+    "babel-core": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
@@ -52,10 +52,10 @@
     "cpx": "^1.2.1",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^3.0.0",
+    "eslint-config-airbnb": "^3.0.2",
     "eslint-plugin-react": "^3.14.0",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "got": "^5.3.0",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.4",
@@ -67,7 +67,7 @@
     "prismjs-package": "^0.5.0",
     "qwest": "^2.2.9",
     "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.5",
+    "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "react-transform-catch-errors": "^1.0.1",
     "react-transform-hmr": "^1.0.1",
@@ -79,7 +79,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "sweetalert": "^1.1.3",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.10",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-sources": "^0.1.0"
