--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-imageloader": "^2.1.0",
-    "react-markdown2": "^0.4.4"
+    "react-markdown2": "^0.4.4",
+    "react-popover": "^0.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
