--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "sweetalert": "^1.1.3",
+    "update-it": "0.0.1",
     "webpack": "^1.12.10",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
