spinner based on loaders.css

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "homepage": "https://github.com/reactbits/fiber#readme",
   "dependencies": {
     "classnames": "^2.2.3",
-    "halogen": "^0.1.10",
     "hover.css": "^2.0.2",
     "is_js": "^0.7.6",
+    "loaders.css": "^0.1.1",
     "lodash": "^3.10.1",
     "md5": "^2.0.0",
     "moment": "^2.11.1",
