--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "react-dom": "^0.14.6",
     "react-imageloader": "^2.1.0",
     "react-markdown2": "^0.4.4",
-    "react-popover": "^0.4.4"
+    "react-popover": "^0.4.4",
+    "tus-js-client": "^1.1.3"
   },
   "devDependencies": {
-    "apiproxy": "^0.1.0",
+    "apiproxy": "^0.1.1",
     "autoprefixer": "^6.2.3",
     "babel": "^6.3.26",
     "babel-core": "^6.4.0",
@@ -86,6 +87,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "sweetalert": "^1.1.3",
+    "tus-js-client": "^1.1.3",
     "update-it": "0.1.0",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.4.0",
