--- a/.babelrc
+++ b/.babelrc
@@ -2,18 +2,7 @@
   "presets": ["es2015", "stage-0", "react"],
 	"env": {
     "development": {
-      "plugins": [
-        ["react-transform", {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react"]
-          }]
-        }]
-      ]
+      "presets": ["react-hmre"]
     }
   }
 }
