--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "component-upload": "^0.3.0",
     "hover.css": "^2.0.2",
     "is_js": "^0.8.0",
+    "jquery": "^2.2.0",
     "loaders.css": "^0.1.2",
     "lodash": "^4.0.0",
     "md5": "^2.0.0",
@@ -54,9 +55,9 @@
     "babel-core": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
-    "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.1",
     "babel-preset-stage-0": "^6.3.13",
     "cpx": "^1.2.1",
     "css-loader": "^0.23.1",
@@ -66,7 +67,6 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "got": "^6.1.0",
-    "jquery": "^2.2.0",
     "json-loader": "^0.5.4",
     "make-reducer": "^0.4.0",
     "morgan": "^1.6.1",
@@ -77,9 +77,6 @@
     "qwest": "^3.0.0",
     "react-bootstrap": "^0.28.2",
     "react-redux": "^4.0.6",
-    "react-transform-catch-errors": "^1.0.1",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.2.0",
     "redux": "^3.0.5",
     "redux-devtools": "^3.0.1",
     "redux-devtools-dock-monitor": "^1.0.1",
