--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "classnames": "^2.2.3",
     "component-upload": "^0.3.0",
+    "hint.css": "^2.0.0",
     "hover.css": "^2.0.2",
     "is_js": "^0.8.0",
     "jquery": "^2.2.0",
