--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-imageloader": "^2.1.0",
     "react-markdown2": "^0.10.23",
     "react-popover": "^0.4.4",
+    "react-router": "^2.0.0",
     "tus-js-client": "^1.1.4"
   },
   "devDependencies": {
