--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "autoprefixer": "^6.3.3",
     "babel": "^6.5.2",
     "babel-core": "^6.7.2",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
