--- a/package.json
+++ b/package.json
@@ -50,42 +50,16 @@
   },
   "devDependencies": {
     "apiproxy": "^0.1.3",
-    "autoprefixer": "^6.3.3",
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.2",
-    "babel-eslint": "^6.0.0-beta.6",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "cpx": "^1.3.1",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.2",
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "json-loader": "^0.5.4",
     "make-reducer": "^0.4.4",
-    "morgan": "^1.7.0",
-    "node-sass": "^3.4.2",
-    "normalize.css": "^4.0.0",
-    "postcss-loader": "^0.8.2",
     "react-bootstrap": "^0.28.3",
+    "react-devpack": "^0.1.5",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-devtools": "^3.1.1",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.0",
     "sweetalert": "^1.1.3",
     "tus-js-client": "^1.1.3",
-    "update-it": "0.1.5",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "webpack-sources": "^0.1.1"
+    "update-it": "0.1.5"
   }
 }
