--- a/package.json
+++ b/package.json
@@ -46,13 +46,15 @@
     "react-markdown2": "^0.10.28",
     "react-popover": "^0.4.4",
     "react-router": "^2.0.1",
+    "reactbits-input": "^0.0.3",
+    "reflexbox": "^1.1.0",
     "tus-js-client": "^1.1.4"
   },
   "devDependencies": {
     "apiproxy": "^0.1.3",
     "make-reducer": "^0.4.4",
     "react-bootstrap": "^0.28.3",
-    "react-devpack": "^0.1.11",
+    "react-devpack": "^0.1.13",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-devtools": "^3.2.0",
