--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "tus-js-client": "^1.1.4"
   },
   "devDependencies": {
-    "apiproxy": "^0.1.3",
+    "http-proxy-middleware": "^0.13.0",
     "make-reducer": "^0.4.5",
     "react-devpack": "^0.1.18",
     "react-redux": "^4.4.4",
