--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "node devserver.js",
-    "lint": "eslint .",
+    "lint": "eslint --ext .js,.jsx .",
     "sass": "cpx './components/**/*.scss' ./lib",
     "babel": "babel components --out-dir lib",
     "build": "NODE_ENV=production npm run babel && npm run sass",
