fixing lint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,12 +18,14 @@
     "id-length": 0,
     "indent": [2, "tab"],
     "no-console": 0,
+    "no-tabs": 0,
     "func-names": 0,
     "no-use-before-define": 0,
     "linebreak-style": 0,
     "import/no-extraneous-dependencies": 0,
     "react/no-multi-comp": 0,
     "react/prop-types": 0,
-    "react/jsx-indent": [2, "tab"]
+    "react/jsx-indent": [2, "tab"],
+    "jsx-a11y/no-static-element-interactions": 0
   }
 }
