--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "indent": [2, "tab"],
     "no-console": 0,
     "no-tabs": 0,
+    "no-plusplus": 0,
     "func-names": 0,
     "no-use-before-define": 0,
     "linebreak-style": 0,
